[package]
name = "cargo-install-upgrade"
version = "1.0.22"
authors = ["hecal3 <hecal3@users.noreply.github.com>"]
keywords = ["cargo", "subcommand", "install", "upgrade"]
description = "Extends cargo to upgrade packages installed via 'cargo install'"
edition = "2021"


[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true # ~40kb
codegen-units = 1 # ~2kb
#panic = "abort" # ~12kb not for tempfiles


[[bin]]
name = "cargo-install-upgrade"

[dependencies]
semver = "1"
clap = { version = "4", features = ["wrap_help"] }
serde_json = "1"
tempdir = "0.3"
log = "*"
env_logger = "*"
dirs = "5"
